Set up environment

--- a/Project/index.html
+++ b/Project/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>TechStore - Your Ultimate Electronics Store</title>
+  <title>NovaTech - Your Ultimate Electronics Store</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <header>
     <nav>
       <div class="container">
-        <h1>TechStore</h1>
+        <h1>NovaTech</h1>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Products</a></li>
@@ -23,17 +23,16 @@
 
   <main class="container">
     <section class="hero">
-      <h2>Welcome to TechStore</h2>
+      <h2>Welcome to NovaTech</h2>
       <p>Discover the latest and greatest in consumer electronics and IT products.</p>
       <a href="products.html" class="explore-button">Explore Products</a>
     </section>
 
   <footer>
     <div class="container">
-      <p>&copy; 2023 TechStore. All rights reserved.</p>
+      <p>&copy; 2023 NovaTech Pte Ltd. All rights reserved.</p>
     </div>
   </footer>
 
-  <script src="scripts.js"></script>
 </body>
 </html>
