--- a/index.html
+++ b/index.html
@@ -4,21 +4,27 @@
   <title>NovaTech - Your Ultimate Electronics Store</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" type="image/x-icon" href="images/favicon/favicon.ico">
 </head>
 
 <body>
   <header>
-    <nav>
-      <div class="container">
-        <h1>NovaTech</h1>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="products.html">Products</a></li>
-          <li><a href="aboutus.html">About Us</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-    </nav>
+    <div class="container">
+        <div id="logo">
+            <img src="images/logo_transparent.png" width="200">
+        </div>
+        
+        <div id="menu">
+          <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="products.html">Products</a></li>
+              <li><a href="aboutus.html">About Us</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+    </div>
   </header>
 
   <main class="container">
