done header&footer UI and made some misc changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- START OF HEADER -->
     <div id="header">
         <div id="logo">
-            <a href="index.html"><img src="images/logo_transparent.png"></a>
+            <a href="index.html"><img src="images/logo.png"></a>
         </div>
 
         <div id="searchbar">
@@ -46,7 +46,7 @@
         </div>
         
     </div>
-    <!-- START OF HEADER -->
+    <!-- END OF HEADER -->
 
 
     <!-- START OF NAVBAR -->
@@ -68,36 +68,48 @@
   
 
     <!-- START OF BANNER -->
-
     <div class="banner">
       <h1>PROMOTION</h1>
       <!-- <div class="bannerpromo"> -->
-        <img src="images/bannertest.webp" width="100%">
+        <img src="images/blackfriday.jpg" width="100%">
       <!-- </div> -->
     </div>
     
     <div class="banner">
       <h1>BESTSELLERS</h1>
       <div class="bannerbest">
-        <div>Item 1</div>
-        <div>Item 2</div>
-        <div>Item 3</div>
-        <div>Item 4</div>
-        <div>Item 5</div>
+        <div><img src="images/#"></div>
+        <div><img src="images/#"></div>
+        <div><img src="images/#"></div>
+        <div><img src="images/#"></div>
+        <div><img src="images/#"></div>
+      </div>
+      <div class="bannerbestdesc">
+        <div><p>Description 1</p></div>
+        <div><p>Description 2</p></div>
+        <div><p>Description 3</p></div>
+        <div><p>Description 4</p></div>
+        <div><p>Description 5</p></div>
       </div> 
     </div>
 
     <div class="banner">
       <h1>NEW ARRIVALS</h1>
       <div class="bannernew">
-        <div>Item 1</div>
-        <div>Item 2</div>
-        <div>Item 3</div>
-        <div>Item 4</div>
-        <div>Item 5</div>
+        <div><img src="images/#"></div>
+        <div><img src="images/#"></div>
+        <div><img src="images/#"></div>
+        <div><img src="images/#"></div>
+        <div><img src="images/#"></div>
       </div>
+      <div class="bannernewdesc">
+        <div><p>Description 1</p></div>
+        <div><p>Description 2</p></div>
+        <div><p>Description 3</p></div>
+        <div><p>Description 4</p></div>
+        <div><p>Description 5</p></div>
+      </div> 
     </div>
-
     <!-- END OF BANNER -->
 
     <!-- START OF FOOTER -->
@@ -106,17 +118,17 @@
           <div id="sitemap">
             <nav>
               <ul>
-                <li><a href="#.html">Home</a></li>
-                <li><a href="#.html">All Products</a></li>
-                <li><a href="#.html">About Us</a></li>
-                <li><a href="#.html">Customer Service</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">All Products</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
                 <!-- <li><a href="products.html">Products</a></li> |
                 <li><a href="aboutus.html">About Us</a></li> |
                 <li><a href="contact.html">Contact</a></li> -->
               </ul>
             </nav>
           </div>
-          <p>&copy; 2023 NovaTech Pte Ltd. All rights reserved.</p>
+          <p>&copy; 2023 NovaTech Pte Ltd. All Rights Reserved.</p>
       </footer>
     </div>
     <!-- END OF FOOTER -->
