just some minor misc changes

--- a/products.html
+++ b/products.html
@@ -68,17 +68,19 @@
   <main class="container">
     <section class="product-list">
       <div class="product">
-        <img src="images/item1.jpg" alt="Thumb Drive">
-        <h2>Product 1</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <img src="images/item1.jpg" alt="Thumb Drive" width="300px" height="300px" style="margin-top:50px;">
+        <h2>Product 1 Title</h2>
+        <p>Product 1 Description</p>
         <button class="buy-button">Buy Now</button>
       </div>
+      <br><br>
       <div class="product">
-        <img src="images/item2.jpg" alt="Portable Hard Drive">
-        <h2>Product 2</h2>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+        <img src="images/item2.jpg" alt="Portable Hard Drive" width="300px" height="300px">
+        <h2>Product 2 Title</h2>
+        <p>Product 2 Description</p>
         <button class="buy-button">Buy Now</button>
       </div>
+      <br>
       <!-- Add more product entries here -->
     </section>
   </main>
