--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="searchbar">
           <form action="#.php" method="get">
             <input type="text" name="search" id="search" placeholder="Search...">
-            <button type="submit" class="topbuttons">Search</button>
+            <button type="submit" id="searchbuttons">Search</button>
           </form>
         </div>
 
