--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             </form>
           </div>
 
-          <a href="wishlist.html"><button class="topbuttons">Wishlist</button></a>
-          <a href="cart.html"><button class="topbuttons">Cart</button></a>
+          <a href="wishlist.php"><button class="topbuttons">Wishlist</button></a>
+          <a href="cart.php"><button class="topbuttons">Cart</button></a>
         </div>
         
     </div>
