--- a/checkout.html
+++ b/checkout.html
@@ -40,8 +40,8 @@
             </form>
           </div>
 
-          <a href="wishlist.html"><button class="topbuttons">Wishlist</button></a>
-          <a href="cart.html"><button class="topbuttons">Cart</button></a>
+          <a href="wishlist.php"><button class="topbuttons">Wishlist</button></a>
+          <a href="cart.php"><button class="topbuttons">Cart</button></a>
         </div>
         
     </div>
@@ -78,7 +78,7 @@
           <nav>
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="products.html">All Products</a></li>
+              <li><a href="products.php">All Products</a></li>
               <li><a href="aboutus.html">About Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
               <!-- <li><a href="products.html">Products</a></li> |
