--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			  <li><a href="#.html">Category 2</a></li> |
 			  <li><a href="#.html">Category 3</a></li> |
 			  <li><a href="#.html">Category 4</a></li>
-			  <!-- <li><a href="products.html">Products</a></li> |
+			  <!-- <li><a href="products.php">Products</a></li> |
 			  <li><a href="aboutus.html">About Us</a></li> |
 			  <li><a href="contact.html">Contact</a></li> -->
 			</ul>
@@ -122,7 +122,7 @@
             <nav>
               <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="products.html">All Products</a></li>
+                <li><a href="products.php">All Products</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 <!-- <li><a href="products.html">Products</a></li> |
