beautify aboutus.html page

--- a/aboutus.html
+++ b/aboutus.html
@@ -64,9 +64,11 @@
         </nav>
       </div>
       <!-- END OF NAVBAR -->
-      
+      <div class="aboutus">
+        <img src="images/aboutus.jpg" width="80%" style="display:block; margin-left:auto; margin-right:auto; width:100%;">
+      </div> 
       <div id="bodytext">
-        <br><h1>Welcome to NovaTech - Your Ultimate Electronics Store</h1>
+        <h1>Welcome to NovaTech - Your Ultimate Electronics Store</h1>
         <p>NovaTech is Singapore's up and coming ecommerce retailer offering to revolutionise the online shopping experience for consumer electronics and IT enthusiasts. With a diverse selection of consumer electronics, IT products, and accessories, our platform is dedicated to offering convenience and accessibility to our esteemed customers.</p><br>
         
         <h2>Our Story</h2>
