--- a/aboutus.html
+++ b/aboutus.html
@@ -97,7 +97,7 @@
           <nav>
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="products.php">All Products</a></li>
+              <li><a href="products.php">Products</a></li>
               <li><a href="aboutus.html">About Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
