added search engine feature

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" type="image/x-icon" href="images/favicon/favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="text/javascript" src="js/login.js"></script>
 </head>
 
@@ -18,9 +19,9 @@
         </div>
 
         <div id="searchbar">
-          <form action="#.php" method="get">
-            <input type="text" name="search" id="search" placeholder="Search...">
-            <button type="submit" id="searchbuttons">Search</button>
+          <form action="searchresult.php" method="post">
+            <input type="text" name="searchterm" id="searchterm" placeholder="Find a product..." required>
+            <button type="submit" id="searchbuttons">Search <i class="fa fa-search"></i></button>
           </form>
         </div>
 
@@ -121,7 +122,7 @@
             <nav>
               <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="products.php">All Products</a></li>
+                <li><a href="products.php">Products</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
               </ul>
