--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
   <title>NovaTech - Your Ultimate Electronics Store</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/registerstyles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" type="image/x-icon" href="images/favicon/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="text/javascript" src="js/login.js"></script>
