improved contact page information

--- a/contact.html
+++ b/contact.html
@@ -66,9 +66,13 @@
       </div>
     <!-- END OF NAVBAR -->
 
-      <div>
-        <h2>Contact Us</h2>
-        <p style="font-size:18px">If you have any questions or inquiries, please do not hesitate to get in touch with us.</p><br>
+      
+    <div class="contactus">
+      <img src="images/contactus.png" width="80%" style="display:block; margin-left:auto; margin-right:auto; width:100%; margin-bottom: 50px;">
+    </div>
+    
+    <div>
+        <p style="font-size:18px">Need to get in touch with us, whether to inquire about our products, discuss our services, or simply provide a feedback, we love to hear from you.</p><br>
         <form method="post" action="#.php" name="contactform" class="contactform" id="contactform">
           <div>
             <label for="name">*Name:</label>    
