--- a/aboutus.html
+++ b/aboutus.html
@@ -32,7 +32,7 @@
     <!-- START OF HEADER -->
     <div id="header">
         <div id="logo">
-            <a href="index.html"><img src="images/logo.png"></a>
+            <a href="index.php"><img src="images/logo.png"></a>
         </div>
 
         <div id="searchbar">
@@ -56,7 +56,7 @@
       <div id="navbar">
         <nav>
           <ul>
-            <li><a href="index.html">Home</a></li> | 
+            <li><a href="index.php">Home</a></li> | 
             <li><a href="products.php">Products</a></li> |
             <li><a href="aboutus.html">About Us</a></li> |
             <li><a href="contact.html">Contact Us</a></li>
@@ -96,7 +96,7 @@
           <div id="sitemap">
             <nav>
               <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.php">Home</a></li>
                 <li><a href="products.php">Products</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
